[package]
name = "cargo-pwhide"
version = "0.1.0"
edition = "2021"
description ="pwhide encrypts passwords using the crate name as secret. This is marginal better then plain text. pwhide-lib is used to decode it a program"

categories=["command-line-utilities","cryptography"]
keywords=["password","encryption","utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"
name = "cargo_pwhide"


[[bin]]
path="src/main.rs"
name = "cargo-pwhide"

[dependencies]
clap = { version = "4.3.23", features = ["derive", "cargo"] }
toml = { version = "0.7.6", features = ["parse"] }
chacha20poly1305 = "0.10.1"
sha2 = "0.10.7"
base-62 = "0.1.1"
anyhow = "1.0.75"
