[package]
name = "cargo-pwhide"
version = "0.3.4"
edition = "2021"
description ="pwhide encrypts passwords using the crate name as secret. This is marginal better then plain text. It is a tool for encryption and a lib to do runtime decryption-"

categories=["command-line-utilities","cryptography"]
keywords=["password","encryption","utility"]
readme="README.md"
homepage="https://github.com/opensource-inemar-net/cargo-pwhide"
repository="https://github.com/opensource-inemar-net/cargo-pwhide"
license="MIT"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"
name = "cargo_pwhide"


[[bin]]
path="src/main.rs"
name = "cargo-pwhide"
doc=false


[features]
lib=[]
cargo=["dep:clap","dep:toml"]
default=["cargo","lib"]


[dependencies]
clap = { version = "4.4.*", features = ["default"], optional = true}
toml = { version = "0.7.*", features = ["parse"], optional = true}
chacha20poly1305 = "0.10.*"
sha2 = "0.10.*"
base-62 = "0.1.*"
anyhow = "1.0.*"
